# timedwallpaper

./: Cargo.toml  README.md
assets/: help.txt
example/: data.ini  wallpaper.config
src/: args.rs  help.rs  main.rs  parseconfigs.rs  sundata.rs
