[package]
name = "timedwallpaper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
reqwest = { version = "0.11.12", features = ["blocking"] }
serde_json = "1.0.86"
serde = { version = "1.0.145", features = ["derive"] }
rust-ini = "0.18.0"
online = "4.0.0"